# Widget

./: .env  .env.template  .flake8  .gitignore  README.md  main.py  pyproject.toml
data/: operations.csv  operations.json
src/: decorators.py  external_api.py  generators.py  io_transactions.py  masks.py  processing.py  transactions.py  utils.py  widget.py
tests/: conftest.py  test_conversion.py  test_decorators.py  test_external_api.py  test_generators.py  test_io_transactions.py  test_main.py  test_masks.py  test_processing.py  test_transactions.py  test_utils.py  test_widget.py
