[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["logs", ".venv", "venv", "__pycache__"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
exclude = "tests/|logs/|venv/|.venv/"
[tool.poetry]
name = "widget-with-logging"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = "*"
openpyxl = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "*"
isort = "*"
mypy = "*"
